--- a/LeafLets/Views/Demo/Index.cshtml
+++ b/LeafLets/Views/Demo/Index.cshtml
@@ -12,18 +12,8 @@
 
     <meta charset="UTF-8">
     @Styles.Render("~/Content/css")
-    <!-- JQUERY CDN -->
-    @*<script src="~/Scripts/jquery-3.3.1.min.js"></script>*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @*<!-- BOOTSTRAP Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="~/Content/bootstrap.min.css">
-
-        <!-- BOOTSTRAP Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" >
-        </script>*@
-
-    <!-- FONT AWESOME CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
@@ -44,51 +34,54 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <style>
+        body {
+            padding: 5px 0 0 0;
+        }
         #mapid {
             width: 100%;
             height: 500px;
         }
-        
     </style>
 </head>
 <body>
     <div id="mapid"></div>
     <script>
         var mymap, tileLayer, maker, printer, locate;
-        const latlng = [25.044308271193106, 121.52936895061339];
-        getMapObject(latlng);
-        //getCurrentLocation();
+        const initlatlng = [25.044308271193106, 121.52936895061339];
+        getMapObject(initlatlng);
         document.getElementById("search").addEventListener("click", function () {
             const queryResult = document.getElementById("queryString");
             if (queryResult.value !== "") {
                 geocodeAddress(queryResult.value);
             }
         });
-        function setMap(latlng) {
-            
-        }
+        
         function getMapObject(latlng) {
-            //const latlng = [position.coords.latitude, position.coords.longitude];
-            mymap = L.map('mapid').setView(latlng, 16);
-            let mapOption = {
+            const mapOption = {
                 attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
                 maxZoom: 20,
                 id: 'mapbox.streets',
                 accessToken: 'sk.eyJ1IjoiYW5keXRhMjQiLCJhIjoiY2pwa2lydGg0MDNvYzN4czg0dWppd3FkNiJ9.E6mIiiD1nsXf5XS_-3G5nA',
             };
-            tileLayer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}',
-                mapOption);
+            const tileLayerStr = 'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}';
+            const getContent = function () {
+                const html = '<div class="input-group">' +
+                    '            <input id="queryString" type="text" class="form-control input-sm" placeholder="輸入你要找的地址">' +
+                    '            <span class="input-group-btn">' +
+                    '            <a class="btn btn-default btn-sm" id="search">' +
+                    '            <i class="fa fa-search" aria-hidden="true" style="color:red"></i></a>' +
+                    '            </span>' +
+                    '         </div>';
+                return html;
+            }
+            mymap = L.map('mapid').setView(latlng, 16);
+            tileLayer = L.tileLayer(tileLayerStr, mapOption);
             tileLayer.addTo(mymap);
             //L.Control.geocoder().addTo(mymap);
-
+            
             L.control.custom({
                 position: 'topright',
-                content: '<div class="input-group">' +
-                    '    <input id="queryString" type="text" class="form-control input-sm" placeholder="輸入你要找的地址">' +
-                    '    <span class="input-group-btn">' +
-                    '        <button class="btn btn-default btn-sm" type="button" id="search">去找!</button>' +
-                    '    </span>' +
-                    '</div>',
+                content: getContent(),
                 classes: '',
                 style: {
                     position: 'absolute',
@@ -122,9 +115,9 @@
         }
         
         /*
-         ** geocode Services
+         * geocode Services
          *
-             */
+         * */
         function geocodeAddress(queryValue) {
             const geocoder = new google.maps.Geocoder();
             geocoder.geocode({
